fixed spacing on login and signup

--- a/client/src/components/AuthForm/AuthForm.css
+++ b/client/src/components/AuthForm/AuthForm.css
@@ -12,7 +12,7 @@
 }
 
 .login form {
-  height: 60%;
+  height: 70%;
   width: 60%;
   display: flex;
   flex-direction: column;
@@ -21,6 +21,10 @@
   font-weight: 300;
   font-size: 20px;
   padding-bottom: 20px;
+}
+
+.login form div {
+  padding: 5px;
 }
 
 
@@ -32,6 +36,7 @@
   padding-left: 10px;
   background-color: var(--platinum);
   box-shadow: 2px 2px 5px var(--gray);
+  margin: 3px;
 }
 
 .login form input:focus {
